az-digital/az_quickstart#2549 fix mobile horizontal scroll. (#900)

--- a/scss/_custom-styles.scss
+++ b/scss/_custom-styles.scss
@@ -182,7 +182,7 @@
 }
 .btn-redbar .icon-text {
   display: block;
-  margin: -5px;
+  margin: -5px 0;
   font-size: 10px;
   line-height: 10px;
 }
